tried to fix remove button alignment

--- a/03-frontend/angular-ecommerce/src/styles.css
+++ b/03-frontend/angular-ecommerce/src/styles.css
@@ -760,6 +760,11 @@ a.primary-btn:hover{
   font-weight: bold;
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+}
+
 /* 
  * ----------------------------
  * Footer section
